@@ -1,5 +1,6 @@
 Version 1.7 -Eta Carinae-
 
+* [FIX] added form to edit groups and change included groups
 * [NEW] Added an Edit CSS feature, with fancy display of css and fast editor form
 * [NEW] Added a setup_virtual.sh for virtual hosting, and changed internal code accordingly
 * [NEW] Added a general Calendar feature for tiki content browsing and groups calendar
